[package]
name = "denon-control-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.denon-control]
path = ".."

[[bin]]
name = "denon_connection"
path = "fuzz_targets/denon_connection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "thread_func_impl"
path = "fuzz_targets/thread_func_impl.rs"
test = false
doc = false
bench = false
